<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Party Projector</string>
    <string name="send">Send</string>
    <string name="display_picture">Display Picture</string>
    <string name="capture_picture">Capture Picture</string>
    <string name="write_message">Write a message</string>
    <string name="pref_server">Server</string>
    <string name="pref_server_summ">HTTP address of the projector server</string>
    <string name="message_sent">Message sent!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="picture_sent">Picture sent!</string>
    <string name="write_failed">Cannot create image file</string>
    <string name="pref_server_test">Test connection</string>
    <string name="pref_server_test_summ">Check the connection to the projector server</string>
    <string name="connection_success">Connection works!</string>
    <string name="connection_failed">Can\'t connect to projector server.</string>
    <string name="ok">OK</string>
    <string name="title_activity_stream">Live Stream</string>
    <string name="pref_camera">Camera</string>
    <string name="pref_flash_light">Enable flash light</string>
    <string name="pref_stream_resolution">Resolution</string>
    <string name="pref_stream_quality">Quality</string>
    <string name="pref_streaming">Video Streaming</string>
    <string name="pref_projector">Projector Server</string>
    <string name="camera_location_back">back</string>
    <string name="camera_location_front">front</string>
    <string name="camera_location_unknown">Unknown</string>
    <string name="title_activity_about">About</string>
    <string name="about_version" translatable="false">Version 0.5 / AZ.16</string>
    <string name="about_copy" translatable="false">&#169; 2016 by Aggisoft, Christian Scheb</string>
    <string name="about_web1" translatable="false">www.aggiwear.com</string>
    <string name="about_web2" translatable="false">www.christianscheb.de</string>
    <string name="about_credit1" translatable="false">Video streaming based on <a href="https://github.com/foxdog-studios/peepers">Peepers</a></string>
    <string name="about_credit2" translatable="false">Icons by <a href="http://www.icons8.com">Icons8</a></string>
    <string name="stream_live">LIVE</string>
    <string name="stream_connect">Connecting</string>
    <string name="stream_video">Stream Video</string>
    <string name="connection_failed_title">Connection Failed</string>
    <string name="connection_failed_msg">Could not connect to the server. Make sure you\'re connected to wifi and the correct server address is configured.</string>
    <string name="stream_disconnected">Disconnected</string>
</resources>
